Fixed spacing of header, added margins

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
 header {
     display: flex;
     flex-direction: row;
@@ -8,5 +13,5 @@ header {
 }
 
 #links {
-    justify-self: flex-end;
+    margin-left: auto;
 }
